; ModuleID = '/home/carl/AnghaBench/php-src/ext/com_dotnet/extr_com_iterator.c_com_iter_valid.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/com_dotnet/extr_com_iterator.c_com_iter_valid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.php_com_iterator = type { i32 }

@IS_UNDEF = common dso_local global i64 0, align 8
@SUCCESS = common dso_local global i32 0, align 4
@FAILURE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @com_iter_valid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @com_iter_valid(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca %struct.php_com_iterator*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i64 @Z_PTR(i32 %7)
  %9 = inttoptr i64 %8 to %struct.php_com_iterator*
  store %struct.php_com_iterator* %9, %struct.php_com_iterator** %4, align 8
  %10 = load %struct.php_com_iterator*, %struct.php_com_iterator** %4, align 8
  %11 = getelementptr inbounds %struct.php_com_iterator, %struct.php_com_iterator* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i64 @Z_TYPE(i32 %12)
  %14 = load i64, i64* @IS_UNDEF, align 8
  %15 = icmp ne i64 %13, %14
  br i1 %15, label %16, label %18

16:                                               ; preds = %1
  %17 = load i32, i32* @SUCCESS, align 4
  store i32 %17, i32* %2, align 4
  br label %20

18:                                               ; preds = %1
  %19 = load i32, i32* @FAILURE, align 4
  store i32 %19, i32* %2, align 4
  br label %20

20:                                               ; preds = %18, %16
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i64 @Z_PTR(i32) #1

declare dso_local i64 @Z_TYPE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
